Z-index fixes

--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,7 @@ img {
 .fixed-header #header{
   position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 2;
   height: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -702,7 +702,7 @@ img.banner {
 
 .image-modal {
   position: fixed;
-  z-index: 5;
+  z-index: 3;
   width: 100%;
   height: 100%;
   background-color: white;
